Invalid flags in default_material_surface->nodetree->tag. #103389

Closed
opened 2022-12-21 22:56:19 +01:00 by Martijn Versteegh · 8 comments

System Information
Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11

Blender Version
Broken: version: 3.5.0 Alpha, branch: master (modified), commit date: 2022-12-21 13:29, hash: 3535670ff1
Worked: don't know.

Short description of error
For many files a material nodetree is saved with tag set to a value which causes an assert upon loading (in debugmode).

Exact steps for others to reproduce the error

  • import a .glb or .obj or .usd (maybe others too) model with a material.
  • save it to a blend file
  • open the resulting blend file

This assert fails:

blender/source/blender/blenloader/intern/readfile.cc:
2028│   /* No-main and other types of special IDs should never be written in .blend files. */
2029├─> BLI_assert((id->tag & (LIB_TAG_NO_MAIN | LIB_TAG_NO_USER_REFCOUNT | LIB_TAG_NOT_ALLOCATED)) ==
2030│              0);

This is caused by default_material_surface->nodetree->tag having the offending flags set. Because default_material_surface is the base for all imported materials the final materials will have these set as well and they will get saved to the file.

a ready made test file , made by importing an .obj is attached:
test.blend

**System Information** Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master (modified), commit date: 2022-12-21 13:29, hash: `3535670ff1` Worked: don't know. **Short description of error** For many files a material nodetree is saved with tag set to a value which causes an assert upon loading (in debugmode). **Exact steps for others to reproduce the error** - import a .glb or .obj or .usd (maybe others too) model with a material. - save it to a blend file - open the resulting blend file This assert fails: ``` blender/source/blender/blenloader/intern/readfile.cc: 2028│ /* No-main and other types of special IDs should never be written in .blend files. */ 2029├─> BLI_assert((id->tag & (LIB_TAG_NO_MAIN | LIB_TAG_NO_USER_REFCOUNT | LIB_TAG_NOT_ALLOCATED)) == 2030│ 0); ``` This is caused by default_material_surface->nodetree->tag having the offending flags set. Because default_material_surface is the base for all imported materials the final materials will have these set as well and they will get saved to the file. a ready made test file , made by importing an .obj is attached: [test.blend](https://archive.blender.org/developer/F14081313/test.blend)
Author
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap

#103411 was marked as duplicate of this issue

#103411 was marked as duplicate of this issue

Added subscribers: @mont29, @deadpin

Added subscribers: @mont29, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Marking as high since the assert was added recently with b93025db59 In the OBJ case I tried, the node tree is coming in with the LIB_TAG_NO_MAIN flag set.

CC @mont29

Marking as high since the assert was added recently with b93025db59 In the OBJ case I tried, the node tree is coming in with the `LIB_TAG_NO_MAIN` flag set. CC @mont29
Member

Added subscriber: @Mark-Alan-Bolstad

Added subscriber: @Mark-Alan-Bolstad

This issue was referenced by 32b1947be2

This issue was referenced by 32b1947be240111e6ccaa933d354c8a4855cd810

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-12-26 08:25:24 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:10 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103389
No description provided.