Fix T103389: Invalid flags in default_material_surface->nodetree->tag.

There are still codepaths that can create embedded IDs with `NO_MAIN`
tag. Related to T88555 TODO.